buffer fix, geojson reqrite, more public methods